Fixed white space when clicking on hamburger

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -8,7 +8,7 @@
     url("../img/girl-gymnast-exercise-3840x2400.jpg");
 
   /* Set a specific height */
-  height: 105vh;
+  height: 125vh;
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
